--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -128,5 +128,13 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media (hover: none),
+  (hover: on-demand),
+  (-moz-touch-enabled: 1),
+  (pointer: coarse) {
+  .privacy {
+    padding-top: 3rem;
+    padding-right: 1.25rem;
+    padding-left: 1.25rem;
+  }
 }
